--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ license = "MIT"
 log = "0.4"
 pretty_env_logger = "0.4"
 nix = "0.17"
-fuse = "0.3"
-time_old = { package = "time", version = "0.1" }
+#fuse = "0.3"
+fuse = { branch = "master", git = "https://github.com/Sherlock-Holo/fuse-rs" }
 libc = "0.2"
 path-clean = "0.1"
 futures-util = "0.3"
@@ -23,4 +23,4 @@ features = ["rt-threaded"]
 
 [dependencies.async-std]
 version = "1.5"
-features = ["attributes"]
+features = ["attributes", "unstable"]
