feat: optimize Errno error message

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,14 @@ nix = "0.17"
 fuse = { branch = "master", git = "https://github.com/Sherlock-Holo/fuse-rs" }
 libc = "0.2"
 path-clean = "0.1"
-futures-util = "0.3"
+futures = "0.3"
 tonic = { version = "0.1", features = ["transport"] }
 prost = "0.6"
 prost-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = "0.4"
+thiserror = "1.0"
 
 [dependencies.tokio]
 version = "0.2"
@@ -31,6 +32,9 @@ features = ["rt-threaded"]
 [dependencies.async-std]
 version = "1.5"
 features = ["attributes", "unstable"]
+
+[dev-dependencies]
+tempfile = "3.1"
 
 [build-dependencies]
 tonic-build = "0.1"
