--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,6 @@ build = "build.rs"
 log = "0.4"
 pretty_env_logger = "0.4"
 nix = "0.17"
-#fuse = "0.3"
-fuse = { branch = "master", git = "https://github.com/Sherlock-Holo/fuse-rs" }
 libc = "0.2"
 path-clean = "0.1"
 futures = "0.3"
@@ -24,6 +22,11 @@ serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = "0.4"
 thiserror = "1.0"
+
+[dependencies.fuse]
+branch = "master"
+git = "https://github.com/Sherlock-Holo/fuse-rs"
+features = ["posix-lock"]
 
 [dependencies.tokio]
 version = "0.2"
