--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ nix = "0.17"
 libc = "0.2"
 path-clean = "0.1"
 futures = "0.3"
-tonic = { version = "0.1", features = ["transport"] }
+tonic = { version = "0.1", features = ["transport", "tls"] }
 prost = "0.6"
 prost-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = "0.4"
 thiserror = "1.0"
+tower = "0.3"
 
 [dependencies.fuse]
 branch = "master"
@@ -30,7 +31,7 @@ features = ["posix-lock"]
 
 [dependencies.tokio]
 version = "0.2"
-features = ["rt-threaded"]
+features = ["rt-threaded", "uds"]
 
 [dependencies.async-std]
 version = "1.5"
