refactor: optimize mount options and update dep

--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -26,4 +26,4 @@ features = ["attributes"]
 
 [dependencies.tokio]
 version = "0.2"
-features = ["rt-core", "rt-threaded", "signal"]
+features = ["rt-threaded", "signal"]
