--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -13,17 +13,12 @@ serde_yaml = "0.8"
 serde_json = "1.0"
 structopt = "0.3"
 futures-util = "0.3"
-lazy_static = "1.4"
 log = "0.4"
 nix = "0.17"
 rand = "0.7"
 anyhow = "1.0"
 scopeguard = "1.1"
 
-[dependencies.async-std]
-version = "1.5"
-features = ["attributes"]
-
 [dependencies.tokio]
 version = "0.2"
-features = ["rt-threaded", "signal"]
+features = ["rt-threaded", "signal", "fs", "macros", "time"]
