build: rand dep only use getrandom feature now

--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 rfs = { path = ".." }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 serde_json = "1.0"
@@ -15,7 +16,7 @@ structopt = "0.3"
 futures-util = "0.3"
 log = "0.4"
 nix = "0.17"
-rand = "0.7"
+rand = { version = "0.7", default-features = false, features = ["getrandom"] }
 anyhow = "1.0"
 scopeguard = "1.1"
 
