--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -20,10 +20,11 @@ rand = { version = "0.7", default-features = false, features = ["getrandom"] }
 anyhow = "1.0"
 scopeguard = "1.1"
 lazy_static = "1"
+async-signals = "0.1"
 
 [dependencies.tokio]
 version = "0.2"
-features = ["rt-threaded", "signal"]
+features = ["rt-threaded"]
 
 [dependencies.async-std]
 version = "1.5"
