--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ nix = "0.17"
 libc = "0.2"
 path-clean = "0.1"
 futures-util = "0.3"
-tonic = { version = "0.1", features = ["transport", "tls"] }
+tonic = { version = "0.1", features = ["transport", "tls", "tls-roots"] }
 prost = "0.6"
 prost-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
