fix: server may exit but not unmount rfs-uds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ tower = "0.3"
 anyhow = "1.0"
 async-notify = "0.1"
 tokio = "0.2"
-async-signals = "0.2"
+async-signals = "0.3.0-alpha.0"
 snap = "1"
 
 [dependencies.fuse]
