--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -20,7 +20,7 @@ rand = { version = "0.7", default-features = false, features = ["getrandom"] }
 anyhow = "1.0"
 scopeguard = "1.1"
 lazy_static = "1"
-async-signals = "0.2"
+async-signals = "0.3.0-alpha.0"
 
 [dependencies.tokio]
 version = "0.2"
