--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ debug = true
 [workspace]
 members = [".", "rfs-client", "rfs-server"]
 
+[features]
+default = []
+test = []
+
 [dependencies]
 log = "0.4"
 pretty_env_logger = "0.4"
