--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ pretty_env_logger = "0.4"
 nix = "0.17"
 libc = "0.2"
 path-clean = "0.1"
-futures-util = "0.3"
+futures = "0.3"
 tonic = { version = "0.1", features = ["transport", "tls", "tls-roots"] }
 prost = "0.6"
 prost-types = "0.6"
