--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 serde_json = "1.0"
 structopt = "0.3"
-futures-util = "0.3"
+futures = "0.3"
 log = "0.4"
 nix = "0.17"
 rand = { version = "0.7", default-features = false, features = ["getrandom"] }
