--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,12 @@ tower = "0.3"
 anyhow = "1.0"
 async-notify = "0.1"
 tokio = "0.2"
-async-signals = "0.3.0-alpha.0"
+async-signals = "0.3"
 snap = "1"
+
+[dependencies.atomic_value]
+branch = "master"
+git = "https://github.com/Sherlock-Holo/atomic_value"
 
 [dependencies.fuse]
 branch = "master"
