--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ async-notify = "0.1"
 tokio = "0.2"
 async-signals = "0.3.0-alpha.0"
 snap = "1"
+atomic_value = "0.1.0"
 
 [dependencies.fuse]
 branch = "master"
