--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,12 +39,13 @@ jobs:
           profile: default
           toolchain: nightly
           override: true
-      #      - uses: actions-rs/cargo@v1
-      #        with:
-      #          command: test
-      #          args: --jobs 1 -- --nocsudo apture
 
-      - name: test
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -- --nocapture
+
+      - name: integration test
         run: ./test.sh
 
   fmt:
