--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ debug = true
 members = [".", "rfs-client", "rfs-server"]
 
 [features]
-default = []
 test = []
 
 [dependencies]
@@ -36,10 +35,10 @@ thiserror = "1.0"
 tower = "0.3"
 anyhow = "1.0"
 async-notify = "0.1"
-tokio = "0.2"
 async-signals = "0.3"
 snap = "1"
 atomic_value = "0.1.0"
+smol = { version = "0.1", features = ["tokio02"] }
 
 [dependencies.fuse]
 branch = "master"
