--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -16,13 +16,7 @@ futures = "0.3"
 log = "0.4"
 nix = "0.17"
 anyhow = "1.0"
-lazy_static = "1"
 async-signals = "0.3.0"
-
-[dependencies.tokio]
-version = "0.2"
-features = ["rt-threaded"]
-
-[dependencies.async-std]
-version = "1.5"
-features = ["attributes"]
+smol = { version = "0.1", features = ["tokio02"] }
+async-std = "1.5"
+num_cpus = "1.13"
