--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ pretty_env_logger = "0.4"
 nix = "0.17"
 libc = "0.2"
 path-clean = "0.1"
-futures = "0.3"
+futures-util = "0.3"
+futures-channel = "0.3"
 tonic = { version = "0.2", features = ["transport", "tls", "tls-roots"] }
 prost = "0.6"
 prost-types = "0.6"
