--- a/rfs-client/Cargo.toml
+++ b/rfs-client/Cargo.toml
@@ -15,7 +15,7 @@ structopt = "0.3"
 anyhow = "1.0"
 log = "0.4"
 tonic = { version = "0.2", features = ["tls"] }
-futures = "0.3"
+futures-util = "0.3"
 nix = "0.17"
 smol = { version = "0.1", features = ["tokio02"] }
 async-std = "1.5"
