--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -12,7 +12,7 @@ rfs = { path = ".." }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 structopt = "0.3"
-futures = "0.3"
+futures-util = "0.3"
 log = "0.4"
 nix = "0.17"
 anyhow = "1.0"
