feat: add semver check

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ async-signals = "0.3"
 snap = "1"
 atomic_value = "0.1"
 smol = { version = "0.1", features = ["tokio02"] }
+fuse3 = { version = "0.1.0-alpha7", features = ["file-lock", "async-std-runtime", "unprivileged"] }
+semver-parser = "0.9"
 
 [dependencies.fuse]
 branch = "master"
