--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,6 @@ debug = true
 [workspace]
 members = [".", "rfs-client", "rfs-server"]
 
-[features]
-test = []
-
 [dependencies]
 log = "0.4"
 pretty_env_logger = "0.4"
@@ -31,24 +28,26 @@ prost = "0.6"
 prost-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
-chrono = "0.4"
-thiserror = "1.0"
 anyhow = "1.0"
 async-notify = "0.1"
 async-signals = "0.3"
 snap = "1"
 atomic_value = "0.1"
 smol = { version = "0.1", features = ["tokio02"] }
-fuse3 = { version = "0.1.0-beta1.0", features = ["file-lock", "async-std-runtime", "unprivileged"] }
+#fuse3 = { version = "0.1.0-beta1.1", features = ["file-lock", "async-std-runtime", "unprivileged"] }
 semver-parser = "0.9"
 async-trait = "0.1"
+async-std = "1.5"
+num_cpus = "1.13"
 
-[dependencies.async-std]
-version = "1.5"
-features = ["attributes"]
+[dependencies.fuse3]
+branch = "master"
+git = "https://github.com/Sherlock-Holo/fuse3"
+features = ["file-lock", "async-std-runtime", "unprivileged"]
 
 [dev-dependencies]
 tempfile = "3.1"
+async-std = { version = "1.5", features = ["attributes"] }
 
 [build-dependencies]
 tonic-build = "0.2"
