--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,16 +34,16 @@ async-signals = "0.3"
 snap = "1"
 atomic_value = "0.1"
 smol = { version = "0.1", features = ["tokio02"] }
-#fuse3 = { version = "0.1.0-beta1.1", features = ["file-lock", "async-std-runtime", "unprivileged"] }
+fuse3 = { version = "0.1.0-beta1.2", features = ["file-lock", "async-std-runtime", "unprivileged"] }
 semver-parser = "0.9"
 async-trait = "0.1"
 async-std = "1.5"
 num_cpus = "1.13"
 
-[dependencies.fuse3]
-branch = "master"
-git = "https://github.com/Sherlock-Holo/fuse3"
-features = ["file-lock", "async-std-runtime", "unprivileged"]
+#[dependencies.fuse3]
+#branch = "master"
+#git = "https://github.com/Sherlock-Holo/fuse3"
+#features = ["file-lock", "async-std-runtime", "unprivileged"]
 
 [dev-dependencies]
 tempfile = "3.1"
