--- a/rfs-client/Cargo.toml
+++ b/rfs-client/Cargo.toml
@@ -11,7 +11,7 @@ rfs = { path = ".." }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
-structopt = "0.3"
+structopt = { version = "0.3", features = ["color"] }
 anyhow = "1.0"
 log = "0.4"
 tonic = { version = "0.2", features = ["tls"] }
