--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,11 @@ async-notify = "0.2"
 async-signals = "0.3"
 snap = "1"
 atomic_value = "0.1"
-smol = { version = "0.1", features = ["tokio02"] }
 fuse3 = { version = "0.1.0-beta1.2", features = ["file-lock", "async-std-runtime", "unprivileged"] }
 semver-parser = "0.9"
 async-trait = "0.1"
-async-std = "1.5"
+smol = { version = "0.1", features = ["tokio02"] }
+async-std = "1.6"
 num_cpus = "1.13"
 
 #[dependencies.fuse3]
@@ -47,7 +47,7 @@ num_cpus = "1.13"
 
 [dev-dependencies]
 tempfile = "3.1"
-async-std = { version = "1.5", features = ["attributes"] }
+async-std = { version = "1.6", features = ["tokio02", "attributes"] }
 
 [build-dependencies]
 tonic-build = "0.2"
