--- a/rfs-client/Cargo.toml
+++ b/rfs-client/Cargo.toml
@@ -14,8 +14,7 @@ serde_yaml = "0.8"
 structopt = { version = "0.3", features = ["color"] }
 anyhow = "1.0"
 log = "0.4"
-tonic = { version = "0.2", features = ["tls"] }
+tonic = { version = "0.4", features = ["tls"] }
 futures-util = "0.3"
-nix = "0.17"
-smol = { version = "0.1", features = ["tokio02"] }
-async-std = "1.6"
+nix = "0.19"
+tokio = { version = "1.2", features = ["fs", "rt-multi-thread", "macros"] }
