--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,6 @@ lto = true
 members = [".", "rfs-client", "rfs-server"]
 
 [dependencies]
-log = "0.4"
-pretty_env_logger = "0.4"
 nix = "0.20"
 libc = "0.2"
 path-clean = "0.1"
@@ -35,7 +33,7 @@ atomic_value = "0.1"
 fuse3 = { version = "0.2.0-beta.4", features = ["file-lock", "tokio-runtime", "unprivileged"] }
 semver-parser = "0.10"
 async-trait = "= 0.1"
-tokio = { version = "1.2", features = ["fs", "net", "rt", "sync", "time", "macros"] }
+tokio = { version = "1.3", features = ["fs", "net", "rt", "sync", "time", "macros"] }
 bytes = "1.0"
 async-stream = "0.3"
 tokio-stream = { version = "0.1", features = ["fs"] }
@@ -43,6 +41,11 @@ pin-project = "1.0"
 tower = "0.4"
 http = "0.2"
 http-body = "0.4"
+tracing = "0.1"
+tracing-subscriber = "0.2"
+tracing-opentelemetry = "0.11"
+opentelemetry = "0.12"
+opentelemetry-jaeger = "0.11"
 
 #[dependencies.fuse3]
 #branch = "master"
