--- a/rfs-client/Cargo.toml
+++ b/rfs-client/Cargo.toml
@@ -13,8 +13,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 structopt = { version = "0.3", features = ["color"] }
 anyhow = "1.0"
-log = "0.4"
 tonic = { version = "0.4", features = ["tls"] }
 futures-util = "0.3"
-nix = "0.19"
-tokio = { version = "1.2", features = ["fs", "rt-multi-thread", "macros"] }
+nix = "0.20"
+tokio = { version = "1.3", features = ["fs", "rt-multi-thread", "macros"] }
+tracing = "0.1"
