--- a/rfs-server/Cargo.toml
+++ b/rfs-server/Cargo.toml
@@ -13,8 +13,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 structopt = { version = "0.3", features = ["color"] }
 futures-util = "0.3"
-log = "0.4"
-nix = "0.19"
+nix = "0.20"
 anyhow = "1.0"
 async-signals = "0.3"
-tokio = { version = "1.2", features = ["fs", "rt-multi-thread", "macros"] }
+tokio = { version = "1.3", features = ["fs", "rt-multi-thread", "macros"] }
+tracing = "0.1"
