--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rfs"
 version = "0.4.0"
 authors = ["Sherlock Holo <sherlockya@gmail.com>"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 build = "build.rs"
 
@@ -15,14 +15,14 @@ lto = true
 members = [".", "rfs-client", "rfs-server"]
 
 [dependencies]
-nix = "0.20"
+nix = "0.23"
 libc = "0.2"
 path-clean = "0.1"
 futures-util = "0.3"
 futures-channel = "0.3"
-tonic = { version = "0.4", features = ["transport", "tls", "tls-roots"] }
-prost = "0.7"
-prost-types = "0.7"
+tonic = { version = "0.6", features = ["transport", "tls", "tls-roots"] }
+prost = "0.9"
+prost-types = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 anyhow = "1.0"
@@ -30,7 +30,7 @@ async-notify = "0.2"
 async-signals = "0.3"
 snap = "1.0"
 atomic_value = "0.1"
-fuse3 = { version = "0.2.0-beta.4", features = ["file-lock", "tokio-runtime", "unprivileged"] }
+fuse3 = { version = "0.3", features = ["file-lock", "tokio-runtime", "unprivileged"] }
 semver-parser = "0.10"
 async-trait = "= 0.1"
 tokio = { version = "1.3", features = ["fs", "net", "rt", "sync", "time", "macros"] }
@@ -38,7 +38,7 @@ bytes = "1.0"
 async-stream = "0.3"
 tokio-stream = { version = "0.1", features = ["fs"] }
 pin-project = "1.0"
-tower = "0.4"
+tower = { version = "0.4", features = ["reconnect"] }
 http = "0.2"
 http-body = "0.4"
 tracing = "0.1"
@@ -56,4 +56,4 @@ opentelemetry-jaeger = "0.11"
 tempfile = "3.2"
 
 [build-dependencies]
-tonic-build = "0.4"
+tonic-build = "0.6"
