--- a/rfs-client/Cargo.toml
+++ b/rfs-client/Cargo.toml
@@ -18,3 +18,8 @@ futures-util = "0.3"
 nix = "0.23"
 tokio = { version = "1.3", features = ["fs", "rt-multi-thread", "macros"] }
 tracing = "0.1"
+tower = { version = "0.4", features = ["reconnect"] }
+bytes = "1"
+http = "0.2"
+http-body = "0.4"
+pin-project = "1"
