--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 anyhow = "1.0"
 async-notify = "0.2"
-async-signals = "0.3"
+async-signals = "0.4"
 snap = "1.0"
 fuse3 = { version = "0.3", features = ["file-lock", "tokio-runtime", "unprivileged"] }
 semver-parser = "0.10"
@@ -37,14 +37,14 @@ bytes = "1.0"
 async-stream = "0.3"
 tokio-stream = { version = "0.1", features = ["fs"] }
 pin-project = "1.0"
-tower = { version = "0.4", features = ["reconnect"] }
+tower-service = "0.3"
 http = "0.2"
 http-body = "0.4"
 tracing = "0.1"
-tracing-subscriber = "0.2"
-tracing-opentelemetry = "0.11"
-opentelemetry = "0.12"
-opentelemetry-jaeger = "0.11"
+tracing-subscriber = { version = "0.3", features = ["json"] }
+tracing-opentelemetry = "0.17"
+opentelemetry = "0.17"
+opentelemetry-jaeger = "0.16"
 
 #[dependencies.fuse3]
 #branch = "master"
